	  interface/TiMidity.ad, interface/xaw_c.c, interface/xaw_i.c,
	  interface/xaw_p.h: Make the interface apply the previous
	  volume.  It also fixes some minor display issues (remove the
	  checkmark next to hidetrace menu item when initing the trace
	  the first time after starting with '-ia' and 'Disp:Trace'
	  set to 0, don't allow activing the play button when no files
	  are loaded).

2012-05-26  Hans de Goede <hdegoede@redhat.com>

	* configure.in: configure: Fix building of dynamic user
	  interfaces
	* timidity/mac_main.c, timidity/timidity.c: Add a trysource
	  config file directive
	  Add a "trysource" config file directive, which allows to try
	  and source other config files, while continuing without
	  error if the specified file is missing.
	  Also cleanup the user config loading code using this new
	  functionality.
	* interface/x_trace.c, interface/xaw_c.c: xaw-interface: Fix
	  crash when MAX_CHANNELS > 32 (by Yair K.)
	* configure.in, doc/C/README.xaw, interface/Makefile.am,
	  interface/TiMidity-uj.ad, interface/TiMidity.ad,
	  interface/x_trace.c, interface/x_trace.h, interface/xaw.h,
	  interface/xaw_c.c, interface/xaw_i.c, interface/xaw_p.h,
	  interface/xdnd.h: xaw interface update (by Yair K.)
	* timidity/timidity.h: Improve timidity default settings
	  (by Yair K.)
	* configure.in: configure: Fix building with X11 based
	  userinterfaces builtin (Reported by Yair K.)
	* interface/xaw_i.c, interface/xdnd.c: Fix compiler warnings
	  from clang (by Yair K.)
	* interface/xaw_i.c: Xaw: unbreak xdnd (by Yair K.)

2011-12-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* COPYING: Remove due to autogenerated file
	* Makefile.am, autogen.sh: Add autogen.sh

2011-12-22  Hans de Goede <hdegoede@redhat.com>

	* configure.in: [PATCH 18/18] configure: Don't add -lX11 to
	  the generic LIBS
	  This stops timidity itself from depending on libX11 even
	  when build without any interfaces builtin which need libX11.
	  (revised by TAMUKI Shoichi)