@@ -8,6 +8,11 @@
 	  the first time after starting with '-ia' and 'Disp:Trace'
 	  set to 0, don't allow activing the play button when no files
 	  are loaded).
+	* interface/x_trace.c, interface/x_trace.h, interface/xaw_i.c,
+	  interface/xdnd.c: Fix some off by ones (one prevented the
+	  channel number being displayed when muting it [right-click
+	  in trace mode], another in xdnd.c led to a gcc warning with
+	  -Wall), and free a bit more memory (less valgrind warnings).
 
 2012-05-26  Hans de Goede <hdegoede@redhat.com>
 
